# Decast

./: .gitlab-ci.yml  .gitmodules  INSTALL.md  Proposal.md  README.md
AWS/: README.md
AWS/AWS.xcodeproj/: project.pbxproj
AWS/AWSAutoScaling/: AWSAutoScaling.h  AWSAutoScalingService.m  Info.plist
AWS/AWSAutoScalingTests/: AWSAutoScalingTests.m
AWS/AWSCognito/: AWSCognito.h  AWSCognitoService.m
AWS/AWSCognitoIdentityProvider/: AWSCognitoIdentityProvider.h  AWSCognitoIdentityUser.m  AWSCognitoIdentityUserPool.h  AWSCognitoIdentityUserPool.m
AWS/AWSCognitoIdentityProvider/Internal/: AWSCognitoIdentityUserPool_Internal.h  NSData+AWSCognitoIdentityProvider.h
AWS/AWSCognitoIdentityProviderASF/: AWSCognitoIdentityProviderASF.h  AWSCognitoIdentityProviderASF.m
AWS/AWSCognitoIdentityProviderASFTests/: AWSCognitoIdentityProviderASFTests.m
AWS/AWSCognitoIdentityProviderTests/: AWSCognitoIdentityProviderTests.m
AWS/AWSCognitoTests/: AWSCognitoTests.m
AWS/AWSCore/: AWSCore.h
AWS/AWSCore/Authentication/: AWSCredentialsProvider.m  AWSSignature.m
AWS/AWSCore/Bolts/: AWSTask.m
AWS/AWSCore/CognitoIdentity/: AWSCognitoIdentity.h
AWS/AWSCore/Device/: AWSDevice.h  AWSDevice.m
AWS/AWSCore/FMDB/: AWSFMDatabaseAdditions.h  AWSFMDatabaseAdditions.m
AWS/AWSCoreTests/: AWSCoreTests.m
AWS/AWSCore_iOS/: AWSCore_iOS.h  Info.plist
AWS/AWSDynamoDB/: AWSDynamoDB.h  AWSDynamoDBModel.h  AWSDynamoDBModel.m  AWSDynamoDBService.m
AWS/AWSDynamoDBTests/: AWSDynamoDBTests.m
AWS/AWSIoT/: AWSIoT.h  AWSIoTDataManager.m  Info.plist
AWS/AWSIoTTests/: AWSIoTTests.m
AWS/AWSS3/: AWSS3.h  AWSS3PreSignedURL.m  AWSS3TransferUtility.h  AWSS3TransferUtility.m
AWS/AWSS3Tests/: AWSS3Tests.m
AWS/AWSSNS/: AWSSNS.h  AWSSNSService.m
AWS/AWSSNSTests/: AWSSNSTests.m
AWS/AWSSQS/: AWSSQS.h  AWSSQSService.m
AWS/AWSSQSTests/: AWSSQSTests.m
Decast/: Podfile
Decast/Decast/: ViewController.swift
Decast/Decast.xcodeproj/: project.pbxproj
Decast/DecastTests/: DecastTests.swift
Decast/DecastUITests/: DecastUITests.swift
Documentation/: Application Framework.md  On-Device Interface.md  Server-Side API.md
Hardware/remote_core/: .gitignore
Hardware/remote_core/remote_core/: CMakeLists.txt  main.cpp
Hardware/remote_core/remote_core/cmake/: CMakeLists-aws.txt.in
Hardware/remote_core/remote_core/config/: remote_core_config.json
Hardware/remote_core/remote_core/config/certs/: Certificate.crt  Private-Key.key  cert.crt  priv.key
Hardware/remote_core/remote_core/include/: Coder.hpp  Coding.hpp  Command.hpp  CommandMessage.hpp  ConfigCommon.hpp  Container.hpp  HardwareController.hpp  JSONContainer.hpp  Message.hpp  OpenSSLConnection.hpp  Remote.hpp  RemoteController.hpp  TrainingSession.hpp  UUID.hpp
Hardware/remote_core/remote_core/include/Networking/: ConnectionManager.hpp
Hardware/remote_core/remote_core/src/: RemoteController.cpp  RemoteController.hpp  main.cpp
Hardware/remote_core/remote_core/src/Coding/: Coder.cpp  Container.cpp  JSONContainer.cpp
Hardware/remote_core/remote_core/src/Configuration/: ConfigCommon.cpp
Hardware/remote_core/remote_core/src/Controllers/: HardwareController.cpp  RemoteController.cpp
Hardware/remote_core/remote_core/src/Hardware Types/: Command.cpp  Remote.cpp
Hardware/remote_core/remote_core/src/Messaging/: Message.cpp
Hardware/remote_core/remote_core/src/Miscellaneous/: UUID.cpp
Hardware/remote_core/remote_core/src/Networking/: ConnectionManager.cpp  OpenSSLConnection.cpp
Hardware/remote_core/remote_core/src/Training/: TrainingSession.cpp
Hardware/remote_core/remote_core/tests/unit/: CMakeLists-gtest.txt.in  CMakeLists.txt
Hardware/remote_core/remote_core/tests/unit/src/: CoderTests.cpp  ConnectionManagerTests.cpp  JSONContainerTests.cpp  diag_use_before_declaration.swift  main.cpp
RFCore/: README.md
RFCore/RFCore/: Info.plist  RFCore.h  module.modulemap
RFCore/RFCore.xcodeproj/: project.pbxproj
RFCore/RFCoreTests/: RFAssetTests.swift  RFContainerTests.swift  RFCoreTests.swift  RFCredentialsTests.swift  RFFetchRecordsOperationTests.swift  RFModifyRecordOperationTests.swift  RFOperationGroupTests.swift  RFQueryOperationTests.swift  RFQueryTests.swift  RFRecordTests.swift
RemoteKit/: RemoteKit.podspec  core-module.modulemap  publish-podspec.py
RemoteKit/RemoteKit/: RemoteKit.h
RemoteKit/RemoteKit.xcodeproj/: project.pbxproj
RemoteKit/RemoteKitTests/: RKSessionManagerTests.swift
Scripts/: build-dependencies.sh  configure.sh
remote_core/: .gitignore
remote_core/remote_core/: CMakeLists.txt
remote_core/remote_core.xcodeproj/: project.pbxproj
remote_core/remote_core/cmake/: CMakeLists-aws.txt.in  CMakeLists-json.txt.in
remote_core/remote_core/config/: Command-IDs.json  remote_core_config.json
remote_core/remote_core/config/certs/: Certificate.crt
remote_core/remote_core/include/: Coding.hpp  Command.hpp  CommandLine.hpp  ConnectionManager.hpp  Container.hpp  Device.hpp  DispatchQueue.hpp  Error.hpp  HardwareController.hpp  JSONContainer.hpp  Message.hpp  Remote.hpp  RemoteController.hpp  TrainingMessage.hpp  TrainingSession.hpp  static_logic.hpp
remote_core/remote_core/scripts/: configure.sh
remote_core/remote_core/src/: main.cpp
remote_core/remote_core/src/Coding/: Container.cpp  JSONContainer.cpp
remote_core/remote_core/src/Command Line/: CommandLine.cpp
remote_core/remote_core/src/Configuration/: ConfigCommon.cpp
remote_core/remote_core/src/Controllers/: HardwareController.cpp  RemoteController.cpp
remote_core/remote_core/src/Dispatch/: DispatchQueue.cpp
remote_core/remote_core/src/Hardware Types/: Command.cpp  Device.cpp  Remote.cpp
remote_core/remote_core/src/Messaging/: CommandMessage.cpp  Message.cpp  TrainingMessage.cpp
remote_core/remote_core/src/Miscellaneous/: UUID.cpp
remote_core/remote_core/src/Networking/: ConnectionManager.cpp
remote_core/remote_core/src/Training/: TrainingSession.cpp
remote_core/remote_core/tests/unit/: CMakeLists.txt
remote_core/remote_core/tests/unit/src/: CoderTests.cpp  ConnectionManagerTests.cpp  JSONContainerTests.cpp  main.cpp
(+259 files in other folders)
